--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social-media-dashboard-with-theme-switcher",
   "version": "0.1.0",
+  "homepage": "https://monashperera.github.io/social-media-dashboard-with-theme-switcher",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -9,12 +10,15 @@
     "@testing-library/user-event": "^14.6.1",
     "bootstrap": "^5.3.3",
     "cra-template": "1.3.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
